--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,13 @@
 
 export(plot_grid_rein)
 export(reinforcement)
+export(wrapper.prepare.grid)
 import(Matrix)
 import(igraph)
 import(plyr)
 import(slam)
 import(tools)
+importFrom(Rglpk,Rglpk_solve_LP)
 importFrom(SimTOOL,create.admittance)
 importFrom(SimTOOL,create.power)
 importFrom(SimTOOL,solve.LF)
@@ -16,5 +18,4 @@ importFrom(grDevices,colorRamp)
 importFrom(grDevices,rgb)
 importFrom(graphics,par)
 importFrom(graphics,plot)
-importFrom(lpSolve,lp)
 importFrom(reshape2,melt)
